kubernetes-manifests/07-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-service
  namespace: piggymetricsss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-service
  template:
    metadata:
      labels:
        app: registry-service
    spec:
      containers:
      - name: registry-service
        image: asha515/piggymetrics-registry:latest
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 180
          periodSeconds: 30
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: piggymetricsss
spec:
  selector:
    app: registry-service
  ports:
  - port: 8761
    targetPort: 8761
  type: ClusterIP
