kubernetes-manifests/08-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: piggymetricss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: asha515/piggymetrics-auth-service:20251130-083340-eeb2e58
        ports:
        - containerPort: 5000
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 360
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 420
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: piggymetricss
spec:
  selector:
    app: auth-service
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
