kubernetes-manifests/09-account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: piggymetricss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: asha515/piggymetrics-account-service:20251127-130824-e5fa75f
        ports:
        - containerPort: 6000
        readinessProbe:
          tcpSocket:
            port: 6000
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 6000
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: piggymetricss
spec:
  selector:
    app: account-service
  ports:
  - port: 6000
    targetPort: 6000
  type: ClusterIP
