kubernetes-manifests/10-statistics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
  namespace: piggymetricss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-service
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
     spec:
      containers:
      - name: statistics-service
        image: asha515/piggymetrics-statistics-service:latest
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: statistics-service
  namespace: piggymetricss
spec:
  selector:
    app: statistics-service
  ports:
  - port: 7000
    targetPort: 7000
  type: ClusterIP
