kubernetes-manifests/11-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: piggymetricss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: asha515/piggymetrics-notification-service:20251130-084942-2758ae7
        ports:
        - containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 180
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 200
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: piggymetricss
spec:
  selector:
    app: notification-service
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
