kubernetes-manifests/12-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: piggymetricss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: asha515/piggymetrics-gateway:20251130-082600-71aed67
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 360
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 420
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: piggymetricss
spec:
  selector:
    app: gateway
  ports:
  - port: 80
    targetPort: 4000
  type: ClusterIP
