kubernetes-manifests/15-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piggymetrics-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
      # - path: /abc
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: monitoring
      #       port:
      #         number: 80
